metrics/grafana/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana
spec:
  ports:
  - name: dashboard
    port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    name: grafana
  type: ClusterIP
